@@ -51,6 +51,12 @@ Summary of important user-visible changes for version 5.0 (yyyy-mm-dd):
     However, if the property "IntegerHandle" has been set to "off" then
     the property will return an empty matrix ([]).
 
+ ** Patch and surface graphic objects now use the "FaceNormals" property for
+    flat lighting.
+
+ ** "FaceNormals" and "EdgeNormals" for patch and surface graphic objects are
+    now calculated automatically if necessary.
+
  ** Printing using the -dtiff output device will now create compressed
     images using lzw compression.  This change was made for Matlab
     compatibility.  To produce uncompressed images use the -dtiffn
@@ -62,6 +68,9 @@ Summary of important user-visible changes for version 5.0 (yyyy-mm-dd):
  ** The OSMesa library is no longer used.  To print invisible figures
     when using OpenGL graphics, the Qt QOFFSCREENSURFACE feature must be
     available and you must use the qt graphics toolkit.
+
+ ** It is now possible to use files and folders containing Unicode characters
+    in Windows.
 
  ** New functions added in 5.0:
 
